# KYC-DSL

./: .gitignore  .golangci.yml  AMENDMENT_SYSTEM.md  API_DOCUMENTATION.md  BLOCKING_ISSUES_TODO.md  BUILD_TEST_SUMMARY.md  CALL_TREE.md  CALL_TREES.md  CBU_GRAPH_GUIDE.md  CHANGES_v1.5.md  CLAUDE.md  CLEANUP_SUMMARY.txt  COMMIT_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRACT_FIRST.md  DATA_SERVICE_CHECKLIST.md  DATA_SERVICE_GUIDE.md  DATA_SERVICE_IMPLEMENTATION.md  DATA_SERVICE_QUICKSTART.md  DERIVED_ATTRIBUTES.md  FINAL_STATUS.txt  GIO_CLIENT_GUIDE.md  GIT_LARGE_FILES_REVIEW.txt  GO_RUST_MIGRATION_PLAN.md  GRPC_GUIDE.md  GRPC_IMPLEMENTATION_SUMMARY.md  GRPC_SERVICES_COMPLETE.md  IMPROVEMENTS.md  INDEX.md  INTERFACE_VERIFICATION.md  LINEAGE_EVALUATOR.md  LINT_AND_CLIPPY_REPORT.md  MIGRATION_CLEANUP.md  MIGRATION_COMPLETE.md  MIGRATION_SANITY_CHECK.md  MIGRATION_SESSION_SUMMARY.md  MIGRATION_STATUS_FINAL.txt  Makefile  NEXT_SESSION_START_HERE.md  NO_SIDE_DOORS.md  (+51 more)
.zed/: README.md  settings.json  tasks.json
proto_shared/: README.md  data_service.pb.go  data_service.proto  data_service_grpc.pb.go  ontology_service.proto
rust/: .rust-analyzer.toml  Cargo.toml  DEPENDENCIES.md  QUICK_REFERENCE.md  README.md  preflight.sh  verify.sh
rust/kyc_dsl_service/: Cargo.toml  build.rs
rust/kyc_dsl_service/src/: main.rs
rust/kyc_ontology_client/: Cargo.toml  build.rs
rust/kyc_ontology_client/src/: main.rs
scripts/: example_feedback_workflow.sh  init_data_service.sh  init_data_service_tables.sql  init_ontology.sh  kyc_ontology.sql  migrate_feedback.sh  test_api.sh  (+5 more)
(+91 files in other folders)
