[package]
name = "kyc_dsl_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kyc_dsl_core = { path = "../kyc_dsl_core" }
md5 = "0.7"

[build-dependencies]
tonic-build = "0.12"
