[package]
name = "kyc_ontology_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ontology_cli"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

[build-dependencies]
tonic-build = "0.12"
